simple-web/simple-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
spec:
  selector:
    matchLabels:
      app: simple-web
  replicas: 1
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
        - name: simple-web
          image: localhost:5001/simple-web:0.01
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: simple-web
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80
  selector:
    app: simple-web

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: simple-web-tls-ingress
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     cert-manager.io/cluster-issuer: letsencrypt-prod
#     traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
# spec:
#   rules:
#     - host: simple-web.app.halbgera.de
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: simple-web
#                 port:
#                   number: 5678
#   tls:
#     - secretName: simple-web-tls
#       hosts:
#         - simple-web.app.halbgera.de
