simple-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: ca-issuer
  name: simple-web
  namespace: default
spec:
  rules:
  - host: simple-web.localdomain
    http:
      paths:
      # - pathType: Prefix
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simple-web
            port:
              number: 8000
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - simple-web.localdomain
    secretName: simple-web-cert # <-- cert-manager will store the created certificate in this secret.
